--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -33,4 +33,10 @@
         android:layout_height="wrap_content"
         android:text="Testing1" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Test group creation" />
+
 </LinearLayout>
