--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,23 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <!--    title for every page-->
+    <style name="page_title" parent="" >
+        <item name="android:fontFamily">@font/poppins_bold</item>
+        <item name="android:textColor">#070707</item>
+        <item name="android:textSize">28sp</item>
+    </style>
+
+<!--   regular font for page text-->
+    <style name="page_text" parent="" >
+        <item name="android:fontFamily">@font/poppins_regular</item>
+        <item name="android:textColor">#070707</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="page_margin" parent="" >
+        <item name="android:layout_marginLeft">30dp</item>
+        <item name="android:layout_marginRight">30dp</item>
+    </style>
 </resources>
