--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,7 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
         <androidx.fragment.app.FragmentContainerView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/fragment_container"
+            android:id="@+id/navigation_fragment_container"
 
             android:name="androidx.navigation.fragment.NavHostFragment"
             app:defaultNavHost="true"
