--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -51,7 +51,7 @@
         android:fontFamily="@font/poppins_regular"
         android:text="@string/no_account_text"
         android:textAlignment="center"
-        android:textColor="@color/light_brown"
+        android:textColor="@color/purple_500"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +78,7 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/poppins_regular"
         android:text="@string/username_text"
-        android:textColor="@color/light_brown"
+        android:textColor="@color/purple_500"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_login_sign_up_btn" />
@@ -108,7 +108,7 @@
         android:fontFamily="@font/poppins_regular"
         android:text="@string/forgot_username_button_text"
         android:textAllCaps="false"
-        android:textColor="@color/light_brown"
+        android:textColor="@color/purple_500"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_login_username_et" />
 
@@ -120,7 +120,7 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/poppins_regular"
         android:text="@string/password_text"
-        android:textColor="@color/light_brown"
+        android:textColor="@color/purple_500"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -149,7 +149,7 @@
         android:fontFamily="@font/poppins_regular"
         android:text="@string/forgot_password_text"
         android:textAllCaps="false"
-        android:textColor="@color/light_brown"
+        android:textColor="@color/purple_500"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_login_password_et" />
 
@@ -162,7 +162,7 @@
         android:buttonTint="@color/black"
         android:fontFamily="@font/poppins_regular"
         android:text="@string/remember_me_rb_text"
-        android:textColor="@color/light_brown"
+        android:textColor="@color/purple_500"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_login_password_et" />
