--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,10 @@
     <!--    app overall background color-->
     <color name="app_background">#F1E8DD</color>
     <color name="background_text">#F6F0E9</color>
+
     <color name="dark_brown">#312B28</color>
+    <color name="off_white">#FAF4EC</color>
+    <color name="creme">#EBD7B9</color>
 
     <!--    horizontal line-->
     <color name="horizontal_line">#EBE2D8</color>
