--- a/app/src/main/res/layout/fragment_match_tab.xml
+++ b/app/src/main/res/layout/fragment_match_tab.xml
@@ -1,70 +1,204 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MatchTabFragment">
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_view"
+    android:layout_height="wrap_content">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        card_view:contentPadding="20dp"
-        card_view:cardBackgroundColor="@color/off_white"
-        card_view:cardCornerRadius="4dp">
+        tools:context=".MatchTabFragment"
+        android:orientation="vertical">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/matching_group_name"
-                android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="20dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_gravity="center"
+            card_view:cardBackgroundColor="@color/off_white"
+            card_view:cardCornerRadius="4dp"
+            card_view:cardElevation="13dp">
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="One Direction"
-                android:paddingEnd="5dp"
-                android:theme="@style/page_title"
-                card_view:layout_constraintBottom_toBottomOf="parent"
-                card_view:layout_constraintStart_toStartOf="parent"
-                card_view:layout_constraintTop_toTopOf="parent" />
+                android:orientation="vertical">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingHorizontal="15dp"
+                    android:paddingVertical="10dp">
 
-            <include
-                layout="@layout/interest_tag"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                card_view:layout_constraintBottom_toBottomOf="parent"
-                card_view:layout_constraintStart_toEndOf="@+id/matching_group_name"
-                card_view:layout_constraintTop_toTopOf="parent" />
+                    <TextView
+                        android:id="@+id/matching_group_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="One Direction"
+                        android:paddingEnd="5dp"
+                        android:theme="@style/page_title"
+                        card_view:layout_constraintBottom_toBottomOf="parent"
+                        card_view:layout_constraintStart_toStartOf="parent"
+                        card_view:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/biscuit_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="5dp"
-                android:text="12"
-                android:textColor="@color/black"
-                card_view:layout_constraintStart_toStartOf="@id/biscuit_icon"
-                card_view:layout_constraintEnd_toStartOf="@id/biscuit_icon"
-                card_view:layout_constraintTop_toTopOf="parent"
-                card_view:layout_constraintBottom_toBottomOf="parent"/>
+                    <include
+                        layout="@layout/interest_tag"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        card_view:layout_constraintBottom_toBottomOf="parent"
+                        card_view:layout_constraintStart_toEndOf="@+id/matching_group_name"
+                        card_view:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/biscuit_icon"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:contentDescription="@string/biscuit_icon"
-                android:src="@drawable/biscuits_icon"
-                card_view:layout_constraintStart_toEndOf="@id/biscuit_value"
-                card_view:layout_constraintEnd_toEndOf="parent"
-                card_view:layout_constraintTop_toTopOf="parent"
-                card_view:layout_constraintBottom_toBottomOf="parent"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:id="@+id/biscuit_value"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="5dp"
+                        android:text="12"
+                        android:textColor="@color/black"
+                        card_view:layout_constraintStart_toStartOf="@id/biscuit_icon"
+                        card_view:layout_constraintEnd_toStartOf="@id/biscuit_icon"
+                        card_view:layout_constraintTop_toTopOf="parent"
+                        card_view:layout_constraintBottom_toBottomOf="parent"/>
 
+                    <ImageView
+                        android:id="@+id/biscuit_icon"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:contentDescription="@string/biscuit_icon"
+                        android:src="@drawable/biscuits_icon"
+                        card_view:layout_constraintStart_toEndOf="@id/biscuit_value"
+                        card_view:layout_constraintEnd_toEndOf="parent"
+                        card_view:layout_constraintTop_toTopOf="parent"
+                        card_view:layout_constraintBottom_toBottomOf="parent"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-</LinearLayout>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/one_direction_photo"
+                    android:contentDescription="group photo"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingHorizontal="15dp"
+                    android:paddingVertical="10dp"
+                    android:text="Hello"
+                    android:textSize="12sp"/>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    card_view:cardBackgroundColor="@color/off_white"
+                    card_view:cardCornerRadius="4dp"
+                    card_view:cardElevation="15dp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <com.google.android.flexbox.FlexboxLayout
+                            xmlns:app="http://schemas.android.com/apk/res-auto"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="15dp"
+                            app:flexWrap="wrap"
+                            app:justifyContent="center">
+                            <include
+                                layout="@layout/interest_tag"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                            <include
+                                layout="@layout/interest_tag"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                            <include
+                                layout="@layout/interest_tag"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                            <include
+                                layout="@layout/interest_tag"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                            <include
+                                layout="@layout/interest_tag"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                            <include
+                                layout="@layout/interest_tag"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                        </com.google.android.flexbox.FlexboxLayout>
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            card_view:cardBackgroundColor="@color/off_white"
+                            card_view:cardCornerRadius="4dp"
+                            card_view:cardElevation="15dp">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="One thing we can't live without"
+                                    android:textSize="16sp"
+                                    android:textStyle="bold"
+                                    android:paddingHorizontal="15dp"
+                                    android:paddingVertical="20dp"/>
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:paddingHorizontal="15dp"
+                                    android:paddingVertical="20dp"
+                                    android:text="Pancakes." />
+
+                                <androidx.cardview.widget.CardView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    card_view:cardBackgroundColor="@color/off_white"
+                                    card_view:cardCornerRadius="4dp"
+                                    card_view:cardElevation="15dp">
+                                    <LinearLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:orientation="vertical">
+
+                                        <TextView
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:paddingBottom="10dp"
+                                            android:text="One thing we can't live without"
+                                            android:textSize="16sp"
+                                            android:textStyle="bold"
+                                            android:paddingHorizontal="15dp"
+                                            android:paddingVertical="20dp"/>
+
+                                        <TextView
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:text="Pancakes."
+                                            android:paddingHorizontal="15dp"
+                                            android:paddingVertical="20dp"/>
+                                    </LinearLayout>
+                                </androidx.cardview.widget.CardView>
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="60dp">
+        </View>
+    </LinearLayout>
+</ScrollView>
