--- a/app/src/main/res/layout/interest_tag.xml
+++ b/app/src/main/res/layout/interest_tag.xml
@@ -2,14 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Just joined"
         android:background="@drawable/rounded_tag"
-        android:textColor="@color/black"
+        android:fontFamily="@font/karla"
         android:paddingHorizontal="10dp"
-        android:paddingVertical="3dp"
-        android:textSize="9sp"
-        />
+        android:paddingVertical="5dp"
+        android:text="Just joined"
+        android:textColor="@color/black"
+        android:textSize="11sp"
+        android:layout_margin="2dp"/>
 </LinearLayout>
