--- a/app/src/main/res/layout/interest_tag.xml
+++ b/app/src/main/res/layout/interest_tag.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_width="wrap_content">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rounded_tag"
-        android:fontFamily="@font/karla"
-        android:paddingHorizontal="10dp"
-        android:paddingVertical="5dp"
-        android:text="Just joined"
-        android:textColor="@color/black"
-        android:textSize="11sp"
-        android:layout_margin="2dp"/>
-</LinearLayout>
+    android:background="@drawable/rounded_tag"
+    android:fontFamily="@font/karla"
+    android:paddingHorizontal="10dp"
+    android:paddingVertical="5dp"
+    android:text="Just joined"
+    android:textColor="@color/black"
+    android:textSize="11sp"/>
