--- a/app/src/main/res/layout/fragment_group_creation.xml
+++ b/app/src/main/res/layout/fragment_group_creation.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true">
+<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    android:id="@+id/groupCreationFragment"-->
+<!--    android:fillViewport="true">-->
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:theme="@style/page_margin"
-        android:background="@color/app_background">
+        android:background="@color/app_background"
+        tools:layout_conversion_absoluteHeight="762dp"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_conversion_absoluteWidth="411dp">
 
 
         <TextView
@@ -51,10 +58,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/round_corner"
-                android:padding="5dp"
+                android:padding="10dp"
                 android:text="Group Code:"
-                android:textColor="#B5B3B1"
-                android:textStyle="bold"
 
                 />
 
@@ -64,8 +69,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:text="Group name:"
-                android:textColor="#B5B3B1"
-                android:textStyle="bold"
+                android:padding="10dp"
 
                 />
 
@@ -77,7 +81,9 @@
                 android:ems="10"
                 android:hint="Name"
                 android:inputType="textPersonName"
-                android:minHeight="48dp" />
+                android:minHeight="48dp"
+                android:padding="10dp"
+                />
 
             <TextView
                 android:id="@+id/group_tags"
@@ -85,42 +91,53 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:text="Tags:"
-                android:textColor="#B5B3B1"
-                android:textStyle="bold" />
+                android:padding="10dp"
+
+               />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="0dp"
             android:orientation="horizontal"
-            android:theme="@style/page_text"
-            android:layout_margin="0dp">
+            android:theme="@style/page_text">
 
-            <Button
-                android:id="@+id/btn_add_tag"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="+"
-                android:layout_marginRight="0dp"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:textColor="#58322B"
-                android:textSize="25dp"
-                />
 
-            <EditText
-                android:id="@+id/edit_group_tags"
-                android:layout_width="wrap_content"
+<!--            <Button-->
+<!--                android:id="@+id/btn_add_tag"-->
+<!--                style="@style/Widget.AppCompat.Button.Borderless"-->
+<!--                android:layout_width="50dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginRight="0dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:text="+"-->
+<!--                android:textColor="#58322B"-->
+<!--                android:textSize="25dp" />-->
+
+            <!--            <EditText-->
+            <!--                android:id="@+id/edit_group_tags"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:ems="6"-->
+            <!--                android:inputType="textPersonName"-->
+            <!--                android:minHeight="48dp"-->
+            <!--                android:hint="enter tag"-->
+            <!--                android:gravity="center"-->
+            <!--                android:background="@drawable/round_corner"-->
+            <!--                android:layout_margin="0dp"/>-->
+
+            <com.google.android.material.chip.ChipGroup
+
+                android:id="@+id/tags"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="6"
-                android:inputType="textPersonName"
-                android:minHeight="48dp"
-                android:hint="add tag"
-                android:gravity="center"
-                android:background="@drawable/round_corner"
-                android:layout_margin="0dp"
-                />
+                >
+
+            </com.google.android.material.chip.ChipGroup>
+
+
         </LinearLayout>
 
         <LinearLayout
@@ -135,8 +152,9 @@
                 android:layout_height="wrap_content"
                 android:text="About us:"
                 android:layout_marginTop="30dp"
-                android:textColor="#B5B3B1"
-                android:textStyle="bold"/>
+                android:padding="10dp"
+
+                />
 
             <EditText
                 android:id="@+id/edit_group_about_us"
@@ -160,8 +178,8 @@
 
     </LinearLayout>
 
-</ScrollView>
 
-
+<!--for chip group sample-->
+<!--    https://mobikul.com/android-chips-dynamicaly-add-remove-tags-chips-view/-->
 
 
