--- a/app/src/main/res/menu/nav_bar.xml
+++ b/app/src/main/res/menu/nav_bar.xml
@@ -5,7 +5,7 @@
         android:icon="@drawable/batch_icon"
         android:title="@string/match"/>
     <item
-        android:id="@id/myGroupsTab"
+        android:id="@id/myGroupFragment"
         android:icon="@drawable/my_groups_icon"
         android:title="@string/my_groups"/>
     <item
