--- a/app/src/main/res/menu/nav_bar.xml
+++ b/app/src/main/res/menu/nav_bar.xml
@@ -8,6 +8,8 @@
         android:id="@id/myGroupFragment"
         android:icon="@drawable/my_groups_icon"
         android:title="@string/my_groups"/>
+
+<!--    TODO: change id to designated tab-->
     <item
         android:id="@id/myGroupsTab"
         android:icon="@drawable/other_groups_icon"
