--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -4,17 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/matchTabFragment">
+<!--    app:startDestination="@id/loginFragment">-->
 
     <!--    <fragment-->
 <!--        android:id="@+id/userListFragment"-->
 <!--        android:name="com.example.batchtest.UserListFragment"-->
 <!--        android:label="UserListFragment" />-->
-    <fragment
-        android:id="@+id/matchTabFragment"
-        android:name="com.example.batchtest.MatchTabFragment"
-        android:label="fragment_match_tab"
-        tools:layout="@layout/fragment_match_tab"/>
+    <!-- login fragment -->
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.batchtest.LoginFragment"
@@ -24,6 +21,13 @@
             android:id="@+id/action_loginFragment_to_matchTabFragment"
             app:destination="@id/matchTabFragment" />
     </fragment>
+    <!-- match tab fragment -->
+    <fragment
+        android:id="@+id/matchTabFragment"
+        android:name="com.example.batchtest.MatchTabFragment"
+        android:label="fragment_match_tab"
+        tools:layout="@layout/fragment_match_tab"/>
+    <!-- group creation fragment -->
     <fragment
         android:id="@+id/groupCreationFragment"
         android:name="com.example.batchtest.GroupCreationFragment"
@@ -33,6 +37,7 @@
             android:id="@+id/to_myGroupFragment"
             app:destination="@id/myGroupFragment" />
     </fragment>
+    <!-- my group fragment -->
     <fragment
         android:id="@+id/myGroupFragment"
         android:name="com.example.batchtest.MyGroupFragment"
